[gd_scene load_steps=11 format=2]

[ext_resource path="res://source/instrument/Instrument.gd" type="Script" id=1]
[ext_resource path="res://source/instrument/NoteAtk.gd" type="Script" id=2]
[ext_resource path="res://source/instrument/NoteSusBase.gd" type="Script" id=3]
[ext_resource path="res://source/instrument/NoteSusExt.gd" type="Script" id=4]
[ext_resource path="res://source/instrument/NoteRelBase.gd" type="Script" id=5]
[ext_resource path="res://source/instrument/NoteRelExt.gd" type="Script" id=6]
[ext_resource path="res://source/instrument/Handling.gd" type="Script" id=7]
[ext_resource path="res://source/instrument/MixerBus.gd" type="Script" id=8]

[sub_resource type="Animation" id=2]
resource_name = "art_damp_reset"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MixerBus:compressor_mix")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "art_dampen"
length = 0.38
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MixerBus:compressor_mix")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.38 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Instrument" type="Node"]
script = ExtResource( 1 )

[node name="NoteAtk" type="Node" parent="."]
script = ExtResource( 2 )

[node name="NoteSusBase" type="Node" parent="." groups=[
"NoteSus",
]]
script = ExtResource( 3 )

[node name="NoteSusExt" type="Node" parent="." groups=[
"NoteSus",
]]
script = ExtResource( 4 )

[node name="NoteRelBase" type="Node" parent="." groups=[
"NoteRel",
]]
script = ExtResource( 5 )

[node name="NoteRelExt" type="Node" parent="." groups=[
"NoteRel",
]]
script = ExtResource( 6 )

[node name="Handling" type="Node" parent="."]
script = ExtResource( 7 )

[node name="MixerBus" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/art_damp_reset = SubResource( 2 )
anims/art_dampen = SubResource( 1 )
